--- a/manifest.json
+++ b/manifest.json
@@ -2,20 +2,24 @@
   "manifest_version": 2,
   "name": "Netflix Remote Control",
   "description": "Server side to use the movile app Netflix Remote Control",
-  "version": "0.1",
+  "version": "0.1.2",
   "icons": {
     "128": "128.png"
   },
-  "app": {
-    "urls": [
-      "http://certification.googleapps.com/app-info/"
-      ],
-    "launch": {
-      "web_url": "http://certification.googleapps.com/"
-    }
+  "browser_action": {
+    "default_icon": "icon.png",
+    "default_popup": "popup.html",
+    "default_title": "Click here!"
   },
   "permissions": [
-    "unlimitedStorage",
+    "activeTab",
+    "https://ajax.googleapis.com/",
     "notifications"
+  ],
+  "content_scripts": [
+    {
+      "matches": ["http://www.netflix.com/*"],
+      "js": ["jquery-2.2.0.min.js", "server.js"]
+    }
   ]
 }
