--- a/manifest.json
+++ b/manifest.json
@@ -14,12 +14,15 @@
   "permissions": [
     "activeTab",
     "https://ajax.googleapis.com/",
-    "notifications"
+    "notifications",
   ],
   "content_scripts": [
     {
       "matches": ["http://www.netflix.com/*"],
       "js": ["jquery-2.2.0.min.js", "server.js"]
     }
-  ]
+  ],
+  "sockets": {
+    "tcpServer" : {"listen": ":8181"}
+  }
 }
